subparse: parse_subrip_time() should not assert on user input
This crash: https://bugzilla.redhat.com/show_bug.cgi?id=1661837 should probably not happen when parsing user-provided data. It makes the front-end crash rather than throwing a warning and handling the bogus input data gracefully. I've also attached the srt file this seems to be coming from.
#3 0x00007fa5913906be in g_assertion_message_expr (domain=domain@entry=0x0, file=file@entry=0x7fa51b549539 "gstsubparse.c", line=line@entry=887, func=func@entry=0x7fa51b54a930 <__func__.22386> "parse_subrip_time", expr=expr@entry=0x7fa51b549573 "p != NULL") at gtestutils.c:2619
s = 0x7fa4a40029d0 "assertion failed: (p != NULL)"
#4 0x00007fa51b540ed1 in parse_subrip_time (ts_string=<optimized out>, ts_string@entry=0x7fa4a4002aa1 "00:07:3", t=t@entry=0x7fa4b67fb750) at gstsubparse.c:887
s = "00:07:3", '\000' <repeats 120 times>
end = <optimized out>
p = 0x0
hour = 0
min = 7
sec = 32
msec = 0
len = <optimized out>
__func__ = "parse_subrip_time"
__PRETTY_FUNCTION__ = "parse_subrip_time"
#5 0x00007fa51b544d97 in parse_subrip (state=0x7fa4ea8f9700, line=0x7fa4a4002a90 "00:07:32,000 --> 00:07:3") at gstsubparse.c:1064
ts_start = 452000000000
ts_end = 140345035808256
end_time = 0x7fa4a4002a9c " --> 00:07:3"
ret = <optimized out>
__PRETTY_FUNCTION__ = "parse_subrip"
__func__ = "parse_subrip"
684172-Pilgrimage-2017-1CD-23.976fps-EN-10kB-TurkceAltyazi-org.rar
Edited by Tim-Philipp Müller